deploy/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    kargo.akuity.io/project-namespace: "true"
    kargo.akuity.io/project: blog
