deploy/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-prod
spec:
  selector:
    matchLabels:
      app: blog-prod
  template:
    metadata:
      labels:
        app: blog-prod
    spec:
      containers:
        - name: blog
          image: blog-prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
