deploy/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-prod
spec:
  selector:
    app: blog-prod
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
