deploy/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-prod
  namespace: blog
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "blog.kyledev.co"
  rules:
    - backendRefs:
        - name: blog
          port: 80
