deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-public
  namespace: blog
spec:
  ingressClassName: nginx
  rules:
    - host: blog.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  name: http
